#630 Options alignment is not correct

--- a/admin/assets/js/src/components/ads/ad-list/QuadsAdList.scss
+++ b/admin/assets/js/src/components/ads/ad-list/QuadsAdList.scss
@@ -131,7 +131,7 @@ and open the template in the editor.
     border-bottom: 1px solid rgba(0, 0, 0, 0.08);
     padding: 6px 5px;
     margin: 0;
-    text-align: center;
+    /* text-align: center;*/
 }
 .quads-more-icon-box li a {
     font-size: 13px;
